tests/fixtures/positive/release-engineering/test-fixture-accessed-from-production/app/src/testFixtures/kotlin/com/example/fixtures/FakeUser.kt
package com.example.fixtures

class FakeUser {
    companion object {
        fun sample(): FakeUser = FakeUser()
    }
}

